--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Interactive card details form</title>
 
@@ -16,36 +18,41 @@
 </head>
 <body>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-  <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
+  <div id="left-side"></div>
+  <div id="right-side">
+    <div class="container">
+      <div class="form">
+        <div class="name">
+          <label for="name">cardholder name</label>
+          <input type="text" id="name" placeholder="e.g. Jane Appleseed">
+        </div>
+        <div class="card-number">
+          <label for="card-number">card number</label>
+          <input type="number" id="card-number" placeholder="e.g. 1234 5678 9123 0000">
+        </div>
+        <div class="date-field">
+          <div class="card-date">
+            <label for="card-date">exp. date (mm/yy)</label>
+            <input type="number" id="card-date-month" placeholder="MM">
+            <input type="number" id="card-date-year" placeholder="YY">
+          </div>
+          <div class="card-cvc">
+            <label for="card-cvc">cvc</label>
+            <input type="number" maxlength="3" id="card-cvc" placeholder="e.g. 123">
+          </div>
+        </div>
+        <div class="button">
+          <button>Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Furkan Mamus</a>.
-  </div>
+  </div> -->
+
+  <script src="app.js"></script>
 </body>
 </html>
