--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card-number">
           <label for="card-number">card number</label>
-          <input type="number" id="card-number" placeholder="e.g. 1234 5678 9123 0000">
+          <input type="text" id="card-number" placeholder="e.g. 1234 5678 9123 0000">
           <span id="cardValidMessage">Can't be blank</span>
         </div>
         <div class="date-field">
